
Wednesday July 6th, 2016
========================

    Added a new reliable ordered messages example. Tracked down some tricky bugs.

    Remove the securing dedicated servers example. Yojimbo is this example but has moved on much further. This code is old and has bugs. Can't reasonably maintain two versions of libyojimbo just for a single example program for secure dedicated servers. The whole point of libyojimbo is secure dedicated servers...

    Cut down the other examples so they don't refer to old yojimbo source.

    Remove the duplicate yojimbo source.

    Brought across just the connect token aspects and put into a self contained example program 009_connect_tokens

    Sketched out room for a messages and blocks example.

    I think this is the last example source code for this series. Has already gone way beyond with libyojimbo. Need to finish R&D and write some new articles stat.

    Rebuild the client/server example without requiring complicated shit like network interface

    eg. send packets directly over an actual socket, use the socket buffer as the queue.

    There is example code for doing exactly this in one example already written.

    I think the client and server need their own sockets though.

    Yes. Progressing well. All I need now is an implementation for the send and receive packet functions.

    Implement SendPacket function

    Implement ReceivePacket function


Saturday May 28th, 2016
=======================

    Now that it reproduces with the basically rewritten packet processor, the question is -- can it be reproduced on linux, in a test case?

    Try again, with the actual packet processor sending packets.

    If it reproduces, then the reproduction can be cut down to isolate the problem.

    If it doesn't reproduce, then I still suspect something bad, eg. mem trashing, or queues or something bad trashing memory.

    First try to strip out the sequence stuff and see if that fixes it.
